# BNIL-Emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: emulator.cpp  emulator.h  emulator.hpp  llil_visitor.cpp  llil_visitor.h  llil_visitor.hpp  plugin.cpp
tests/: Add.cpp  CMakeLists.txt  registers.hpp  tests.cpp
